// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/pages/SingleFI It works with the Redux store 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Connect(SingleFI)
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      jurisdiction={
        Object {
          "geojson": Object {
            "geometry": Object {
              "coordinates": Array [
                Array [
                  Array [
                    101.166915893555,
                    15.0715019595332,
                  ],
                  Array [
                    101.165628433228,
                    15.069429992157,
                  ],
                  Array [
                    101.164855957031,
                    15.0649130333519,
                  ],
                  Array [
                    101.164898872375,
                    15.061473449978,
                  ],
                  Array [
                    101.165843009949,
                    15.0585311116698,
                  ],
                  Array [
                    101.168718338013,
                    15.0577022766384,
                  ],
                  Array [
                    101.173524856567,
                    15.0577437184666,
                  ],
                  Array [
                    101.179447174072,
                    15.0583653449216,
                  ],
                  Array [
                    101.183996200562,
                    15.0589455279759,
                  ],
                  Array [
                    101.189103126526,
                    15.0597743581685,
                  ],
                  Array [
                    101.191892623901,
                    15.0629238834779,
                  ],
                  Array [
                    101.191549301147,
                    15.0671093647448,
                  ],
                  Array [
                    101.19086265564,
                    15.0727036913665,
                  ],
                  Array [
                    101.190605163574,
                    15.0748170653661,
                  ],
                  Array [
                    101.188631057739,
                    15.0768061040682,
                  ],
                  Array [
                    101.185412406921,
                    15.0769304183694,
                  ],
                  Array [
                    101.182150840759,
                    15.0772619228176,
                  ],
                  Array [
                    101.177172660828,
                    15.0780906816776,
                  ],
                  Array [
                    101.174211502075,
                    15.0777591785211,
                  ],
                  Array [
                    101.172151565552,
                    15.0765989134045,
                  ],
                  Array [
                    101.168503761292,
                    15.0753557651845,
                  ],
                  Array [
                    101.166915893555,
                    15.0715019595332,
                  ],
                ],
              ],
              "type": "Polygon",
            },
            "id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
            "properties": Object {
              "jurisdiction_name": "TLv1_01",
              "jurisdiction_parent_id": "dad42fa6-b9b8-4658-bf25-bfa7ab5b16ae",
            },
            "type": "Feature",
          },
          "jurisdiction_id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
        }
      }
      location={[MockFunction]}
      match={
        Object {
          "isExact": true,
          "params": Object {
            "id": "ed2b4b7c-3388-53d9-b9f6-6a19d1ffde1f",
          },
          "path": "/focus-investigation/view/:id",
          "url": "/focus-investigation/view/16",
        }
      }
    >
      <SingleFI
        fetchGoalsActionCreator={[Function]}
        fetchJurisdictionsActionCreator={[Function]}
        fetchPlansActionCreator={[Function]}
        goalsArray={
          Array [
            Object {
              "action_code": "Case Confirmation",
              "completed_task_count": 0,
              "goal_comparator": "=",
              "goal_id": "Case_Confirmation",
              "goal_unit": "each",
              "goal_value": 1,
              "id": "5a27ec10-7a5f-563c-ba11-4de150b336af",
              "jurisdiction_id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
              "measure": "Case confirmation complete",
              "plan_id": "10f9e9fa-ce34-4b27-a961-72fab5206ab6",
              "task_business_status_map": Object {},
              "task_count": 0,
            },
            Object {
              "action_code": "Larval Dipping",
              "completed_task_count": 0,
              "goal_comparator": ">=",
              "goal_id": "Larval_Dipping_Min_3_Sites",
              "goal_unit": "each",
              "goal_value": 3,
              "id": "f8d4e0a9-5867-5c78-9e26-de45d72556c4",
              "jurisdiction_id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
              "measure": "Number of larval dipping activities",
              "plan_id": "10f9e9fa-ce34-4b27-a961-72fab5206ab6",
              "task_business_status_map": Object {
                "Not Visited": 2,
              },
              "task_count": 2,
            },
            Object {
              "action_code": "Mosquito Collection",
              "completed_task_count": 3,
              "goal_comparator": ">=",
              "goal_id": "Mosquito_Collection_Min_3_Traps",
              "goal_unit": "traps",
              "goal_value": 3,
              "id": "0f03cef6-1654-5bba-8898-1d2a8000e5b1",
              "jurisdiction_id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
              "measure": "Number of mosquito collection traps",
              "plan_id": "10f9e9fa-ce34-4b27-a961-72fab5206ab6",
              "task_business_status_map": Object {
                "Complete": 3,
                "In Progress": 3,
                "Incomplete": 1,
                "Not Eligible": 6,
                "Not Visited": 5,
              },
              "task_count": 18,
            },
          ]
        }
        history={
          Object {
            "action": "POP",
            "block": [Function],
            "createHref": [Function],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "length": 1,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "pathname": "/",
              "search": "",
              "state": undefined,
            },
            "push": [Function],
            "replace": [Function],
          }
        }
        jurisdiction={
          Object {
            "geojson": Object {
              "geometry": Object {
                "coordinates": Array [
                  Array [
                    Array [
                      101.166915893555,
                      15.0715019595332,
                    ],
                    Array [
                      101.165628433228,
                      15.069429992157,
                    ],
                    Array [
                      101.164855957031,
                      15.0649130333519,
                    ],
                    Array [
                      101.164898872375,
                      15.061473449978,
                    ],
                    Array [
                      101.165843009949,
                      15.0585311116698,
                    ],
                    Array [
                      101.168718338013,
                      15.0577022766384,
                    ],
                    Array [
                      101.173524856567,
                      15.0577437184666,
                    ],
                    Array [
                      101.179447174072,
                      15.0583653449216,
                    ],
                    Array [
                      101.183996200562,
                      15.0589455279759,
                    ],
                    Array [
                      101.189103126526,
                      15.0597743581685,
                    ],
                    Array [
                      101.191892623901,
                      15.0629238834779,
                    ],
                    Array [
                      101.191549301147,
                      15.0671093647448,
                    ],
                    Array [
                      101.19086265564,
                      15.0727036913665,
                    ],
                    Array [
                      101.190605163574,
                      15.0748170653661,
                    ],
                    Array [
                      101.188631057739,
                      15.0768061040682,
                    ],
                    Array [
                      101.185412406921,
                      15.0769304183694,
                    ],
                    Array [
                      101.182150840759,
                      15.0772619228176,
                    ],
                    Array [
                      101.177172660828,
                      15.0780906816776,
                    ],
                    Array [
                      101.174211502075,
                      15.0777591785211,
                    ],
                    Array [
                      101.172151565552,
                      15.0765989134045,
                    ],
                    Array [
                      101.168503761292,
                      15.0753557651845,
                    ],
                    Array [
                      101.166915893555,
                      15.0715019595332,
                    ],
                  ],
                ],
                "type": "Polygon",
              },
              "id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
              "properties": Object {
                "jurisdiction_name": "TLv1_01",
                "jurisdiction_parent_id": "dad42fa6-b9b8-4658-bf25-bfa7ab5b16ae",
              },
              "type": "Feature",
            },
            "jurisdiction_id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
          }
        }
        location={[MockFunction]}
        match={
          Object {
            "isExact": true,
            "params": Object {
              "id": "ed2b4b7c-3388-53d9-b9f6-6a19d1ffde1f",
            },
            "path": "/focus-investigation/view/:id",
            "url": "/focus-investigation/view/16",
          }
        }
        planById={
          Object {
            "id": "ed2b4b7c-3388-53d9-b9f6-6a19d1ffde1f",
            "jurisdiction_depth": 2,
            "jurisdiction_id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
            "jurisdiction_name": "NVI_439",
            "jurisdiction_name_path": Array [
              "Chadiza",
              "Naviluli",
            ],
            "jurisdiction_parent_id": "2944",
            "jurisdiction_path": Array [
              "2939",
              "2944",
            ],
            "plan_fi_reason": "Routine",
            "plan_fi_status": "A1",
            "plan_id": "10f9e9fa-ce34-4b27-a961-72fab5206ab6",
            "plan_intervention_type": "FI",
            "plan_status": "active",
            "plan_title": "A1-Tha Luang Village 1 Focus 01",
          }
        }
        plansArray={
          Array [
            Object {
              "id": "ed2b4b7c-3388-53d9-b9f6-6a19d1ffde1f",
              "jurisdiction_depth": 2,
              "jurisdiction_id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
              "jurisdiction_name": "NVI_439",
              "jurisdiction_name_path": Array [
                "Chadiza",
                "Naviluli",
              ],
              "jurisdiction_parent_id": "2944",
              "jurisdiction_path": Array [
                "2939",
                "2944",
              ],
              "plan_fi_reason": "Routine",
              "plan_fi_status": "A1",
              "plan_id": "10f9e9fa-ce34-4b27-a961-72fab5206ab6",
              "plan_intervention_type": "FI",
              "plan_status": "active",
              "plan_title": "A1-Tha Luang Village 1 Focus 01",
            },
          ]
        }
        plansIdArray={
          Array [
            "ed2b4b7c-3388-53d9-b9f6-6a19d1ffde1f",
          ]
        }
        supersetService={[Function]}
      >
        <div>
          <h2
            className="page-title mt-4 mb-5"
          >
            Focus Investigation
             
            in
             
            NVI_439
          </h2>
          <Row
            tag="div"
          >
            <div
              className="row"
            >
              <Col
                className="col-6"
                tag="div"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <div
                  className="col-6 col"
                >
                  <h4
                    className="mb-4"
                  >
                    Focus Area Information
                  </h4>
                  <div
                    className="map-area"
                  >
                    <GisidaWrapper
                      geoData={
                        Object {
                          "geojson": Object {
                            "geometry": Object {
                              "coordinates": Array [
                                Array [
                                  Array [
                                    101.166915893555,
                                    15.0715019595332,
                                  ],
                                  Array [
                                    101.165628433228,
                                    15.069429992157,
                                  ],
                                  Array [
                                    101.164855957031,
                                    15.0649130333519,
                                  ],
                                  Array [
                                    101.164898872375,
                                    15.061473449978,
                                  ],
                                  Array [
                                    101.165843009949,
                                    15.0585311116698,
                                  ],
                                  Array [
                                    101.168718338013,
                                    15.0577022766384,
                                  ],
                                  Array [
                                    101.173524856567,
                                    15.0577437184666,
                                  ],
                                  Array [
                                    101.179447174072,
                                    15.0583653449216,
                                  ],
                                  Array [
                                    101.183996200562,
                                    15.0589455279759,
                                  ],
                                  Array [
                                    101.189103126526,
                                    15.0597743581685,
                                  ],
                                  Array [
                                    101.191892623901,
                                    15.0629238834779,
                                  ],
                                  Array [
                                    101.191549301147,
                                    15.0671093647448,
                                  ],
                                  Array [
                                    101.19086265564,
                                    15.0727036913665,
                                  ],
                                  Array [
                                    101.190605163574,
                                    15.0748170653661,
                                  ],
                                  Array [
                                    101.188631057739,
                                    15.0768061040682,
                                  ],
                                  Array [
                                    101.185412406921,
                                    15.0769304183694,
                                  ],
                                  Array [
                                    101.182150840759,
                                    15.0772619228176,
                                  ],
                                  Array [
                                    101.177172660828,
                                    15.0780906816776,
                                  ],
                                  Array [
                                    101.174211502075,
                                    15.0777591785211,
                                  ],
                                  Array [
                                    101.172151565552,
                                    15.0765989134045,
                                  ],
                                  Array [
                                    101.168503761292,
                                    15.0753557651845,
                                  ],
                                  Array [
                                    101.166915893555,
                                    15.0715019595332,
                                  ],
                                ],
                              ],
                              "type": "Polygon",
                            },
                            "id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
                            "properties": Object {
                              "jurisdiction_name": "TLv1_01",
                              "jurisdiction_parent_id": "dad42fa6-b9b8-4658-bf25-bfa7ab5b16ae",
                            },
                            "type": "Feature",
                          },
                          "jurisdiction_id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
                        }
                      }
                      minHeight="200px"
                    />
                  </div>
                  <dl
                    className="row mt-3"
                  >
                    <dt
                      className="col-5"
                    >
                      District
                    </dt>
                    <dd
                      className="col-7"
                    />
                    <dt
                      className="col-5"
                    >
                      Canton
                    </dt>
                    <dd
                      className="col-7"
                    >
                      Chadiza
                    </dd>
                    <dt
                      className="col-5"
                    >
                      FI Reason
                    </dt>
                    <dd
                      className="col-7"
                    >
                      Routine
                    </dd>
                    <dt
                      className="col-5"
                    >
                      FI Status
                    </dt>
                    <dd
                      className="col-7"
                    >
                      A1
                    </dd>
                  </dl>
                  <hr />
                </div>
              </Col>
              <Col
                className="col-6"
                tag="div"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <div
                  className="col-6 col"
                >
                  <div
                    className="fi-active"
                  >
                    <h5
                      className="mb-4 mt-1"
                    >
                      Active Investigation
                    </h5>
                    <dl
                      className="row mt-3"
                    >
                      <dt
                        className="col-5"
                      >
                        Complete
                      </dt>
                      <dd
                        className="col-7"
                      >
                        No
                      </dd>
                    </dl>
                    <hr />
                    <h5
                      className="mb-4 mt-4"
                    >
                      Response
                    </h5>
                    <div
                      className="responseItem"
                      key="Case_Confirmation"
                    >
                      <h6>
                        Case Confirmation
                      </h6>
                      <div
                        className="targetItem"
                      >
                        <p>
                          Measure
                          : 
                          Case confirmation complete
                        </p>
                        <p>
                          Target
                          : 
                          0
                           
                          of
                           
                          1
                        </p>
                        <ProgressBar
                          decimalPoints={0}
                          height="10px"
                          max={1}
                          min={0}
                          value={0}
                        >
                          <div
                            className="progress"
                            style={
                              Object {
                                "height": "10px",
                                "marginBottom": "15px",
                              }
                            }
                          >
                            <div
                              aria-valuemax={1}
                              aria-valuemin={0}
                              aria-valuenow={0}
                              className="progress-bar"
                              role="progressbar"
                              style={
                                Object {
                                  "backgroundColor": "#ff3",
                                  "width": "0%",
                                }
                              }
                            />
                          </div>
                        </ProgressBar>
                      </div>
                    </div>
                    <div
                      className="responseItem"
                      key="Larval_Dipping_Min_3_Sites"
                    >
                      <h6>
                        Larval Dipping
                      </h6>
                      <div
                        className="targetItem"
                      >
                        <p>
                          Measure
                          : 
                          Number of larval dipping activities
                        </p>
                        <p>
                          Target
                          : 
                          2
                           
                          of
                           
                          3
                        </p>
                        <ProgressBar
                          decimalPoints={0}
                          height="10px"
                          max={3}
                          min={0}
                          value={2}
                        >
                          <div
                            className="progress"
                            style={
                              Object {
                                "height": "10px",
                                "marginBottom": "15px",
                              }
                            }
                          >
                            <div
                              aria-valuemax={3}
                              aria-valuemin={0}
                              aria-valuenow={66.66666666666666}
                              className="progress-bar"
                              role="progressbar"
                              style={
                                Object {
                                  "backgroundColor": "#ff5c33",
                                  "width": "67%",
                                }
                              }
                            />
                          </div>
                        </ProgressBar>
                      </div>
                    </div>
                    <div
                      className="responseItem"
                      key="Mosquito_Collection_Min_3_Traps"
                    >
                      <h6>
                        Mosquito Collection
                      </h6>
                      <div
                        className="targetItem"
                      >
                        <p>
                          Measure
                          : 
                          Number of mosquito collection traps
                        </p>
                        <p>
                          Target
                          : 
                          18
                           
                          of
                           
                          3
                        </p>
                        <ProgressBar
                          decimalPoints={0}
                          height="10px"
                          max={3}
                          min={0}
                          value={18}
                        >
                          <div
                            className="progress"
                            style={
                              Object {
                                "height": "10px",
                                "marginBottom": "15px",
                              }
                            }
                          >
                            <div
                              aria-valuemax={3}
                              aria-valuemin={0}
                              aria-valuenow={600}
                              className="progress-bar"
                              role="progressbar"
                              style={
                                Object {
                                  "backgroundColor": "#33ad33",
                                  "width": "600%",
                                }
                              }
                            />
                          </div>
                        </ProgressBar>
                      </div>
                    </div>
                  </div>
                </div>
              </Col>
            </div>
          </Row>
        </div>
      </SingleFI>
    </Connect(SingleFI)>
  </Router>
</Provider>
`;

exports[`containers/pages/SingleFI It works with the Redux store 2`] = `
Object {
  "geoData": Object {
    "geojson": Object {
      "geometry": Object {
        "coordinates": Array [
          Array [
            Array [
              101.166915893555,
              15.0715019595332,
            ],
            Array [
              101.165628433228,
              15.069429992157,
            ],
            Array [
              101.164855957031,
              15.0649130333519,
            ],
            Array [
              101.164898872375,
              15.061473449978,
            ],
            Array [
              101.165843009949,
              15.0585311116698,
            ],
            Array [
              101.168718338013,
              15.0577022766384,
            ],
            Array [
              101.173524856567,
              15.0577437184666,
            ],
            Array [
              101.179447174072,
              15.0583653449216,
            ],
            Array [
              101.183996200562,
              15.0589455279759,
            ],
            Array [
              101.189103126526,
              15.0597743581685,
            ],
            Array [
              101.191892623901,
              15.0629238834779,
            ],
            Array [
              101.191549301147,
              15.0671093647448,
            ],
            Array [
              101.19086265564,
              15.0727036913665,
            ],
            Array [
              101.190605163574,
              15.0748170653661,
            ],
            Array [
              101.188631057739,
              15.0768061040682,
            ],
            Array [
              101.185412406921,
              15.0769304183694,
            ],
            Array [
              101.182150840759,
              15.0772619228176,
            ],
            Array [
              101.177172660828,
              15.0780906816776,
            ],
            Array [
              101.174211502075,
              15.0777591785211,
            ],
            Array [
              101.172151565552,
              15.0765989134045,
            ],
            Array [
              101.168503761292,
              15.0753557651845,
            ],
            Array [
              101.166915893555,
              15.0715019595332,
            ],
          ],
        ],
        "type": "Polygon",
      },
      "id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
      "properties": Object {
        "jurisdiction_name": "TLv1_01",
        "jurisdiction_parent_id": "dad42fa6-b9b8-4658-bf25-bfa7ab5b16ae",
      },
      "type": "Feature",
    },
    "jurisdiction_id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
  },
  "minHeight": "200px",
}
`;

exports[`containers/pages/SingleFI renders SingleFI correctly 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <SingleFI
    fetchGoalsActionCreator={[Function]}
    fetchJurisdictionsActionCreator={[Function]}
    fetchPlansActionCreator={[Function]}
    goalsArray={
      Array [
        Object {
          "action_code": "Case Confirmation",
          "completed_task_count": 0,
          "goal_comparator": "=",
          "goal_id": "Case_Confirmation",
          "goal_unit": "each",
          "goal_value": 1,
          "id": "5a27ec10-7a5f-563c-ba11-4de150b336af",
          "jurisdiction_id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
          "measure": "Case confirmation complete",
          "plan_id": "10f9e9fa-ce34-4b27-a961-72fab5206ab6",
          "task_business_status_map": Object {},
          "task_count": 0,
        },
        Object {
          "action_code": "Larval Dipping",
          "completed_task_count": 0,
          "goal_comparator": ">=",
          "goal_id": "Larval_Dipping_Min_3_Sites",
          "goal_unit": "each",
          "goal_value": 3,
          "id": "f8d4e0a9-5867-5c78-9e26-de45d72556c4",
          "jurisdiction_id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
          "measure": "Number of larval dipping activities",
          "plan_id": "10f9e9fa-ce34-4b27-a961-72fab5206ab6",
          "task_business_status_map": Object {
            "Not Visited": 2,
          },
          "task_count": 2,
        },
      ]
    }
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    jurisdiction={
      Object {
        "geojson": Object {
          "geometry": Object {
            "coordinates": Array [
              Array [
                Array [
                  101.166915893555,
                  15.0715019595332,
                ],
                Array [
                  101.165628433228,
                  15.069429992157,
                ],
                Array [
                  101.164855957031,
                  15.0649130333519,
                ],
                Array [
                  101.164898872375,
                  15.061473449978,
                ],
                Array [
                  101.165843009949,
                  15.0585311116698,
                ],
                Array [
                  101.168718338013,
                  15.0577022766384,
                ],
                Array [
                  101.173524856567,
                  15.0577437184666,
                ],
                Array [
                  101.179447174072,
                  15.0583653449216,
                ],
                Array [
                  101.183996200562,
                  15.0589455279759,
                ],
                Array [
                  101.189103126526,
                  15.0597743581685,
                ],
                Array [
                  101.191892623901,
                  15.0629238834779,
                ],
                Array [
                  101.191549301147,
                  15.0671093647448,
                ],
                Array [
                  101.19086265564,
                  15.0727036913665,
                ],
                Array [
                  101.190605163574,
                  15.0748170653661,
                ],
                Array [
                  101.188631057739,
                  15.0768061040682,
                ],
                Array [
                  101.185412406921,
                  15.0769304183694,
                ],
                Array [
                  101.182150840759,
                  15.0772619228176,
                ],
                Array [
                  101.177172660828,
                  15.0780906816776,
                ],
                Array [
                  101.174211502075,
                  15.0777591785211,
                ],
                Array [
                  101.172151565552,
                  15.0765989134045,
                ],
                Array [
                  101.168503761292,
                  15.0753557651845,
                ],
                Array [
                  101.166915893555,
                  15.0715019595332,
                ],
              ],
            ],
            "type": "Polygon",
          },
          "id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
          "properties": Object {
            "jurisdiction_name": "TLv1_01",
            "jurisdiction_parent_id": "dad42fa6-b9b8-4658-bf25-bfa7ab5b16ae",
          },
          "type": "Feature",
        },
        "jurisdiction_id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
      }
    }
    location={[MockFunction]}
    match={
      Object {
        "isExact": true,
        "params": Object {
          "id": "ed2b4b7c-3388-53d9-b9f6-6a19d1ffde1f",
        },
        "path": "/focus-investigation/view/:id",
        "url": "/focus-investigation/view/16",
      }
    }
    planById={
      Object {
        "id": "ed2b4b7c-3388-53d9-b9f6-6a19d1ffde1f",
        "jurisdiction_depth": 2,
        "jurisdiction_id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
        "jurisdiction_name": "NVI_439",
        "jurisdiction_name_path": Array [
          "Chadiza",
          "Naviluli",
        ],
        "jurisdiction_parent_id": "2944",
        "jurisdiction_path": Array [
          "2939",
          "2944",
        ],
        "plan_fi_reason": "Routine",
        "plan_fi_status": "A1",
        "plan_id": "10f9e9fa-ce34-4b27-a961-72fab5206ab6",
        "plan_intervention_type": "FI",
        "plan_status": "active",
        "plan_title": "A1-Tha Luang Village 1 Focus 01",
      }
    }
    plansArray={
      Array [
        Object {
          "id": "ed2b4b7c-3388-53d9-b9f6-6a19d1ffde1f",
          "jurisdiction_depth": 2,
          "jurisdiction_id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
          "jurisdiction_name": "NVI_439",
          "jurisdiction_name_path": Array [
            "Chadiza",
            "Naviluli",
          ],
          "jurisdiction_parent_id": "2944",
          "jurisdiction_path": Array [
            "2939",
            "2944",
          ],
          "plan_fi_reason": "Routine",
          "plan_fi_status": "A1",
          "plan_id": "10f9e9fa-ce34-4b27-a961-72fab5206ab6",
          "plan_intervention_type": "FI",
          "plan_status": "active",
          "plan_title": "A1-Tha Luang Village 1 Focus 01",
        },
        Object {
          "id": "plan-id-2",
          "jurisdiction_depth": 2,
          "jurisdiction_id": "3378",
          "jurisdiction_name": "TLv1_02",
          "jurisdiction_name_path": Array [
            "Canton Tha Luang",
            "Tha Luang Village",
          ],
          "jurisdiction_parent_id": "2977",
          "jurisdiction_path": Array [
            "2989",
            "2977",
          ],
          "plan_fi_reason": "Case-triggered",
          "plan_fi_status": "A1",
          "plan_id": "plan-id-2",
          "plan_intervention_type": "IRS",
          "plan_status": "active",
          "plan_title": "A1-Tha Luang Village 1 Focus 01",
        },
      ]
    }
    plansIdArray={
      Array [
        "10f9e9fa-ce34-4b27-a961-72fab5206ab6",
      ]
    }
    supersetService={
      [MockFunction] {
        "calls": Array [
          Array [
            0,
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": Promise {},
          },
        ],
      }
    }
  >
    <div>
      <h2
        className="page-title mt-4 mb-5"
      >
        Focus Investigation
         
        in
         
        NVI_439
      </h2>
      <Row
        tag="div"
      >
        <div
          className="row"
        >
          <Col
            className="col-6"
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <div
              className="col-6 col"
            >
              <h4
                className="mb-4"
              >
                Focus Area Information
              </h4>
              <div
                className="map-area"
              >
                <GisidaWrapper
                  geoData={
                    Object {
                      "geojson": Object {
                        "geometry": Object {
                          "coordinates": Array [
                            Array [
                              Array [
                                101.166915893555,
                                15.0715019595332,
                              ],
                              Array [
                                101.165628433228,
                                15.069429992157,
                              ],
                              Array [
                                101.164855957031,
                                15.0649130333519,
                              ],
                              Array [
                                101.164898872375,
                                15.061473449978,
                              ],
                              Array [
                                101.165843009949,
                                15.0585311116698,
                              ],
                              Array [
                                101.168718338013,
                                15.0577022766384,
                              ],
                              Array [
                                101.173524856567,
                                15.0577437184666,
                              ],
                              Array [
                                101.179447174072,
                                15.0583653449216,
                              ],
                              Array [
                                101.183996200562,
                                15.0589455279759,
                              ],
                              Array [
                                101.189103126526,
                                15.0597743581685,
                              ],
                              Array [
                                101.191892623901,
                                15.0629238834779,
                              ],
                              Array [
                                101.191549301147,
                                15.0671093647448,
                              ],
                              Array [
                                101.19086265564,
                                15.0727036913665,
                              ],
                              Array [
                                101.190605163574,
                                15.0748170653661,
                              ],
                              Array [
                                101.188631057739,
                                15.0768061040682,
                              ],
                              Array [
                                101.185412406921,
                                15.0769304183694,
                              ],
                              Array [
                                101.182150840759,
                                15.0772619228176,
                              ],
                              Array [
                                101.177172660828,
                                15.0780906816776,
                              ],
                              Array [
                                101.174211502075,
                                15.0777591785211,
                              ],
                              Array [
                                101.172151565552,
                                15.0765989134045,
                              ],
                              Array [
                                101.168503761292,
                                15.0753557651845,
                              ],
                              Array [
                                101.166915893555,
                                15.0715019595332,
                              ],
                            ],
                          ],
                          "type": "Polygon",
                        },
                        "id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
                        "properties": Object {
                          "jurisdiction_name": "TLv1_01",
                          "jurisdiction_parent_id": "dad42fa6-b9b8-4658-bf25-bfa7ab5b16ae",
                        },
                        "type": "Feature",
                      },
                      "jurisdiction_id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
                    }
                  }
                  minHeight="200px"
                />
              </div>
              <dl
                className="row mt-3"
              >
                <dt
                  className="col-5"
                >
                  District
                </dt>
                <dd
                  className="col-7"
                />
                <dt
                  className="col-5"
                >
                  Canton
                </dt>
                <dd
                  className="col-7"
                >
                  Chadiza
                </dd>
                <dt
                  className="col-5"
                >
                  FI Reason
                </dt>
                <dd
                  className="col-7"
                >
                  Routine
                </dd>
                <dt
                  className="col-5"
                >
                  FI Status
                </dt>
                <dd
                  className="col-7"
                >
                  A1
                </dd>
              </dl>
              <hr />
            </div>
          </Col>
          <Col
            className="col-6"
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <div
              className="col-6 col"
            >
              <div
                className="fi-active"
              >
                <h5
                  className="mb-4 mt-1"
                >
                  Active Investigation
                </h5>
                <dl
                  className="row mt-3"
                >
                  <dt
                    className="col-5"
                  >
                    Complete
                  </dt>
                  <dd
                    className="col-7"
                  >
                    No
                  </dd>
                </dl>
                <hr />
                <h5
                  className="mb-4 mt-4"
                >
                  Response
                </h5>
                <div
                  className="responseItem"
                  key="Case_Confirmation"
                >
                  <h6>
                    Case Confirmation
                  </h6>
                  <div
                    className="targetItem"
                  >
                    <p>
                      Measure
                      : 
                      Case confirmation complete
                    </p>
                    <p>
                      Target
                      : 
                      0
                       
                      of
                       
                      1
                    </p>
                    <ProgressBar
                      decimalPoints={0}
                      height="10px"
                      max={1}
                      min={0}
                      value={0}
                    >
                      <div
                        className="progress"
                        style={
                          Object {
                            "height": "10px",
                            "marginBottom": "15px",
                          }
                        }
                      >
                        <div
                          aria-valuemax={1}
                          aria-valuemin={0}
                          aria-valuenow={0}
                          className="progress-bar"
                          role="progressbar"
                          style={
                            Object {
                              "backgroundColor": "#ff3",
                              "width": "0%",
                            }
                          }
                        />
                      </div>
                    </ProgressBar>
                  </div>
                </div>
                <div
                  className="responseItem"
                  key="Larval_Dipping_Min_3_Sites"
                >
                  <h6>
                    Larval Dipping
                  </h6>
                  <div
                    className="targetItem"
                  >
                    <p>
                      Measure
                      : 
                      Number of larval dipping activities
                    </p>
                    <p>
                      Target
                      : 
                      2
                       
                      of
                       
                      3
                    </p>
                    <ProgressBar
                      decimalPoints={0}
                      height="10px"
                      max={3}
                      min={0}
                      value={2}
                    >
                      <div
                        className="progress"
                        style={
                          Object {
                            "height": "10px",
                            "marginBottom": "15px",
                          }
                        }
                      >
                        <div
                          aria-valuemax={3}
                          aria-valuemin={0}
                          aria-valuenow={66.66666666666666}
                          className="progress-bar"
                          role="progressbar"
                          style={
                            Object {
                              "backgroundColor": "#ff5c33",
                              "width": "67%",
                            }
                          }
                        />
                      </div>
                    </ProgressBar>
                  </div>
                </div>
              </div>
            </div>
          </Col>
        </div>
      </Row>
    </div>
  </SingleFI>
</Router>
`;

exports[`containers/pages/SingleFI renders SingleFI correctly for null plan jurisdction id 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <SingleFI
    fetchGoalsActionCreator={[Function]}
    fetchPlansActionCreator={[Function]}
    goalsArray={Array []}
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    location={[MockFunction]}
    match={
      Object {
        "isExact": true,
        "params": Object {
          "id": "93d3a80e-714c-51c7-a382-7633f1eb1f1b",
        },
        "path": "/focus-investigation/view/:id",
        "url": "/focus-investigation/view/16",
      }
    }
    planById={
      Object {
        "id": "93d3a80e-714c-51c7-a382-7633f1eb1f1b",
        "jurisdiction_depth": 0,
        "jurisdiction_id": " NULL",
        "jurisdiction_name": " NULL",
        "jurisdiction_name_path": "null",
        "jurisdiction_parent_id": " NULL",
        "jurisdiction_path": "null",
        "plan_fi_reason": "Case-triggered",
        "plan_fi_status": "A1",
        "plan_id": "e9c9a069-7d22-44c0-a59e-9a483948716b",
        "plan_intervention_type": "FI",
        "plan_status": "active",
        "plan_title": "A1 - Ban Chamrak Mu - Focus 02 Rubber Plantation",
      }
    }
    plansArray={
      Array [
        Object {
          "id": "93d3a80e-714c-51c7-a382-7633f1eb1f1b",
          "jurisdiction_depth": 0,
          "jurisdiction_id": " NULL",
          "jurisdiction_name": " NULL",
          "jurisdiction_name_path": "null",
          "jurisdiction_parent_id": " NULL",
          "jurisdiction_path": "null",
          "plan_fi_reason": "Case-triggered",
          "plan_fi_status": "A1",
          "plan_id": "e9c9a069-7d22-44c0-a59e-9a483948716b",
          "plan_intervention_type": "FI",
          "plan_status": "active",
          "plan_title": "A1 - Ban Chamrak Mu - Focus 02 Rubber Plantation",
        },
      ]
    }
    plansIdArray={
      Array [
        "93d3a80e-714c-51c7-a382-7633f1eb1f1b",
      ]
    }
    supersetService={
      [MockFunction] {
        "calls": Array [
          Array [
            0,
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": Promise {},
          },
        ],
      }
    }
  >
    <div>
      <h2
        className="page-title mt-4 mb-5"
      >
        Focus Investigation
         
        in
         
      </h2>
      <Row
        tag="div"
      >
        <div
          className="row"
        >
          <Col
            className="col-6"
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <div
              className="col-6 col"
            >
              <h4
                className="mb-4"
              >
                Focus Area Information
              </h4>
              <dl
                className="row mt-3"
              >
                <dt
                  className="col-5"
                >
                  District
                </dt>
                <dd
                  className="col-7"
                />
                <dt
                  className="col-5"
                >
                  Canton
                </dt>
                <dd
                  className="col-7"
                />
                <dt
                  className="col-5"
                >
                  FI Reason
                </dt>
                <dd
                  className="col-7"
                >
                  Case-triggered
                </dd>
                <dt
                  className="col-5"
                >
                  FI Status
                </dt>
                <dd
                  className="col-7"
                >
                  A1
                </dd>
              </dl>
              <hr />
            </div>
          </Col>
          <Col
            className="col-6"
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <div
              className="col-6 col"
            >
              <div
                className="fi-active"
              >
                <h5
                  className="mb-4 mt-1"
                >
                  Active Investigation
                </h5>
                <dl
                  className="row mt-3"
                >
                  <dt
                    className="col-5"
                  >
                    Complete
                  </dt>
                  <dd
                    className="col-7"
                  >
                    No
                  </dd>
                </dl>
                <hr />
                <h5
                  className="mb-4 mt-4"
                >
                  Response
                </h5>
              </div>
            </div>
          </Col>
        </div>
      </Row>
    </div>
  </SingleFI>
</Router>
`;

exports[`containers/pages/SingleFI renders SingleFI correctly 2`] = `
Object {
  "geoData": Object {
    "geojson": Object {
      "geometry": Object {
        "coordinates": Array [
          Array [
            Array [
              101.166915893555,
              15.0715019595332,
            ],
            Array [
              101.165628433228,
              15.069429992157,
            ],
            Array [
              101.164855957031,
              15.0649130333519,
            ],
            Array [
              101.164898872375,
              15.061473449978,
            ],
            Array [
              101.165843009949,
              15.0585311116698,
            ],
            Array [
              101.168718338013,
              15.0577022766384,
            ],
            Array [
              101.173524856567,
              15.0577437184666,
            ],
            Array [
              101.179447174072,
              15.0583653449216,
            ],
            Array [
              101.183996200562,
              15.0589455279759,
            ],
            Array [
              101.189103126526,
              15.0597743581685,
            ],
            Array [
              101.191892623901,
              15.0629238834779,
            ],
            Array [
              101.191549301147,
              15.0671093647448,
            ],
            Array [
              101.19086265564,
              15.0727036913665,
            ],
            Array [
              101.190605163574,
              15.0748170653661,
            ],
            Array [
              101.188631057739,
              15.0768061040682,
            ],
            Array [
              101.185412406921,
              15.0769304183694,
            ],
            Array [
              101.182150840759,
              15.0772619228176,
            ],
            Array [
              101.177172660828,
              15.0780906816776,
            ],
            Array [
              101.174211502075,
              15.0777591785211,
            ],
            Array [
              101.172151565552,
              15.0765989134045,
            ],
            Array [
              101.168503761292,
              15.0753557651845,
            ],
            Array [
              101.166915893555,
              15.0715019595332,
            ],
          ],
        ],
        "type": "Polygon",
      },
      "id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
      "properties": Object {
        "jurisdiction_name": "TLv1_01",
        "jurisdiction_parent_id": "dad42fa6-b9b8-4658-bf25-bfa7ab5b16ae",
      },
      "type": "Feature",
    },
    "jurisdiction_id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
  },
  "minHeight": "200px",
}
`;
